# modelspec

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: card-stats.yml  validate-cards.yml
api/: main.py
api/ranking/: __init__.py  engine.py
cli/modelspec/: cli.py
docs/: CLAUDE_CODE_SETUP.md  gap-analysis.md  graph-ontology.md  metadata-and-categories-audit.md  model-card-template-v3.md  parkinglot.md  system-architecture-v3.md
models/01-ai/: yi-1-5-34b-32k.md  yi-1-5-34b-chat-16k.md  yi-1-5-34b-chat.md  yi-1-5-34b.md  yi-1-5-6b-chat.md  yi-1-5-6b.md  yi-1-5-9b-32k.md  yi-1-5-9b-chat-16k.md  yi-1-5-9b-chat.md  yi-1-5-9b.md  yi-34b-200k.md  yi-34b-chat.md  yi-34b.md  yi-6b-200k.md  yi-6b.md  (+6 more)
schema/: card.py  enums.py  graph.py
scripts/: add_domain_benchmarks.py  add_domain_benchmarks_wave2.py  audit_data_quality.py  compute_competition.py  coverage_report.py  enrich_benchmarks.py  enrich_cards.py  enrich_coding_benchmarks.py  enrich_costs.py  enrich_deeper_coding.py  enrich_granular_benchmarks.py  enrich_mteb.py  enrich_multilingual_benchmarks.py  enrich_multimodal_safety.py  enrich_ollama.py  enrich_open_llm.py  enrich_v1_benchmarks.py  enrich_v2_benchmarks.py  fill_total_parameters.py  ingest_all.py  migrate_benchmarks_to_dict.py  seed_huggingface.py  seed_models_dev.py  seed_tier1_chinese.py  seed_tier1_major.py  seed_tier2_specialized.py  seed_tier3_embeddings.py  validate_pr.py
tests/: test_schema.py
web/: index.html  package-lock.json  package.json
web3d/: contribute.html  downselect.html  index.html
(+1132 files in other folders)
